Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2188

QTextDocument: Bullets in bullet lists are not affected by text color

XMLWordPrintable

    • 7f48c7962 (dev), 2d7972e05 (6.7), 301061040 (tqtc/lts-6.5)

      The following HTML renders with white text and black bullets in the textedit demo. The bullets should be white.

      <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
      <html>
      <head>
      <meta content="text/html; charset=ISO-8859-1"
      http-equiv="content-type">
      <style type="text/css">
      body

      { background-color: #111155; font-family: "Times New Roman",Times,serif; color: #ffffff; }


      </style>
      </head>
      <body>
      <ul>
      <li>Topic 1</li>
      <li>Topic 2</li>
      </ul>
      </body>
      </html>

        For Gerrit Dashboard: QTBUG-2188
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            vhilshei Volker Hilsheimer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes